# mupen64plus-input-udp

./: README.md
projects/cmake/: CMakeLists.txt
src/: plugin.c  plugin.h  version.h
